--- a/Project_2/edge_detection_base/index.html
+++ b/Project_2/edge_detection_base/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    // base p5 library
+    <!-- base p5 library -->
     <script src="libs/p5_lib/p5.min.js"></script>
     <!-- <script src="p5_lib/p5.dom.min.js"></script> -->
     <!-- <script src="p5_lib/p5.sound.min.js"></script> -->
-    // Edge Detection specific libraries and folders
+
+    <!-- Edge Detection specific libraries and folders -->
     <script src="libs/p5/p5.js"></script>
     <script src="libs/p5/addons/p5.dom.js"></script>
     <script src="libs/jsfeat/jsfeat.js"></script>
-    <script src="shared/utils.js"></script>
+    <!-- <script src="shared/utils.js"></script> -->
     <script src="sketch.js"></script>
     <style> body {padding: 0; margin: 0;} </style>
   </head>
