customize code a bit for my needs

--- a/Project_2/marker_tracking/index.html
+++ b/Project_2/marker_tracking/index.html
@@ -16,9 +16,7 @@
 </head>
 
 <body>
-    <h2><a href="../">cv-examples</a></h2>
-    <h1>Marker Tracking <a href="sketch.js">source</a></h1>
-    <p>Track an AR marker. Take a picture of one of <a href="markers.png">these markers</a>. Make sure it has a white border.</p>
+    <h1>Live Mario</h1>
 <!--    <p>Threshold: <input type="range" id="thresholdAmount" value="50"></p>-->
     <p>Markers detected: <span id="markersDetected"></span></p>
     <script src="sketch.js"></script>
