--- a/Project_2/marker_tracking/index.html
+++ b/Project_2/marker_tracking/index.html
@@ -19,6 +19,8 @@
     <h1>Live Mario</h1>
 <!--    <p>Threshold: <input type="range" id="thresholdAmount" value="50"></p>-->
     <p>Markers detected: <span id="markersDetected"></span></p>
+    <p>Score: <span id="score"></span></p>
+
     <script src="sketch.js"></script>
 </body>
 
