created a class for markers, set them to disappear if they are not visible for x frames, update lives

--- a/Project_2/marker_tracking/index.html
+++ b/Project_2/marker_tracking/index.html
@@ -19,8 +19,8 @@
     <h1>Live Mario</h1>
 <!--    <p>Threshold: <input type="range" id="thresholdAmount" value="50"></p>-->
     <p>Markers detected: <span id="markersDetected"></span></p>
-    <p>Score: <span id="score"></span></p>
-
+    <p>Lives: <span id="lives"></span></p>
+    <script src="markers.js"></script>
     <script src="sketch.js"></script>
 </body>
 
