stretch canvas and add fullscreen

--- a/Project_2/marker_tracking/index.html
+++ b/Project_2/marker_tracking/index.html
@@ -11,13 +11,12 @@
         * {
             font-family: sans-serif;
         }
-
     </style>
 </head>
 
 <body>
-    <h1>Live Mario</h1>
-<!--    <p>Threshold: <input type="range" id="thresholdAmount" value="50"></p>-->
+    <!-- <h1>Live Mario</h1> -->
+    <!-- <p>Threshold: <input type="range" id="thresholdAmount" value="50"></p>-->
     <p>Markers detected: <span id="markersDetected"></span></p>
     <p>Lives: <span id="lives"></span></p>
     <script src="markers.js"></script>
