added sound to play with the sketch, but strugled to get it to loop

--- a/Project_2/marker_tracking/index.html
+++ b/Project_2/marker_tracking/index.html
@@ -5,6 +5,7 @@
     <title>MarkerTracking</title>
     <script src="libs/p5/p5.js"></script>
     <script src="libs/p5/addons/p5.dom.js"></script>
+    <script src="libs/p5/addons/p5.sound.js"></script>
     <script src="libs/JSARToolKit/JSARToolKit.min.js"></script>
     <script src="libs/JSARToolKit/magi.js"></script>
     <style>
