--- a/Project_2/marker_tracking/index.html
+++ b/Project_2/marker_tracking/index.html
@@ -18,8 +18,8 @@
 <body>
     <!-- <h1>Live Mario</h1> -->
     <!-- <p>Threshold: <input type="range" id="thresholdAmount" value="50"></p>-->
-    <p>Markers detected: <span id="markersDetected"></span></p>
-    <p>Lives: <span id="lives"></span></p>
+    <h1>Lives: <span id="lives"></span></h1>
+    <p>Enemies detected: <span id="markersDetected"></span></p>
     <script src="markers.js"></script>
     <script src="sketch.js"></script>
 </body>
