adjusted height of canvas, speed, obscurring threshold, and hid the makersDetected tag

--- a/Project_2/marker_tracking/index.html
+++ b/Project_2/marker_tracking/index.html
@@ -19,7 +19,7 @@
     <!-- <h1>Live Mario</h1> -->
     <!-- <p>Threshold: <input type="range" id="thresholdAmount" value="50"></p>-->
     <h1>Lives: <span id="lives"></span></h1>
-    <p>Enemies detected: <span id="markersDetected"></span></p>
+    <p style="color:white;">Enemies detected: <span id="markersDetected"></span></p>
     <script src="markers.js"></script>
     <script src="sketch.js"></script>
 </body>
