--- a/Live_Mario/index.html
+++ b/Live_Mario/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>MarkerTracking</title>
+    <title>Live Mario</title>
     <script src="libs/p5/p5.js"></script>
     <script src="libs/p5/addons/p5.dom.js"></script>
     <script src="libs/p5/addons/p5.sound.js"></script>
