--- a/Live_Mario/index.html
+++ b/Live_Mario/index.html
@@ -18,6 +18,7 @@
 <body>
     <!-- <h1>Live Mario</h1> -->
     <!-- <p>Threshold: <input type="range" id="thresholdAmount" value="50"></p>-->
+    <div id="start_button"> <button type="button" name="button" onclick=start_game()> Start </button></div>
     <h1>Lives: <span id="lives"></span></h1>
     <p style="color:white;">Enemies detected: <span id="markersDetected"></span></p>
     <script src="markers.js"></script>
